// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InitRegistrationPage should allow user to subscribe for notifications of available places if admission is ongoing and exam is full but queue is not full 1`] = `
<div
  className="MuiGrid-root MuiGrid-direction-xs-row public-registration css-17fpwt7-MuiGrid-root"
>
  <div
    className="public-registration__grid"
  >
    <div
      className="rows public-registration__grid__heading public-registration__grid__no-stepper"
    >
      <h1
        className="MuiTypography-root MuiTypography-h1 css-10l7o3s-MuiTypography-root"
        style={{}}
      >
        enrollToQueue.header
      </h1>
      <div
        className="header-separator MuiBox-root css-0"
      />
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 css-1gtchvp-MuiPaper-root"
      style={
        {
          "--Paper-shadow": "0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12)",
        }
      }
    >
      <div
        className="public-registration__grid__form-container"
      >
        <div
          className="rows gapped"
        >
          <div
            className="rows"
          >
            <div
              className="rows-gapped-xxs"
            >
              <p
                className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                style={{}}
              >
                examSession: 
                <b>
                  yki.common.languages.fin, yki.common.languageLevel.YLIN
                </b>
              </p>
              <p
                className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                style={{}}
              >
                examDate: 
                <b>
                  01/01/2035
                </b>
              </p>
              <p
                className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                style={{}}
              >
                institution: 
                <b>
                  Jälkiedu, Jokukatu 4, Tampere
                </b>
              </p>
              <p
                className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                style={{}}
              >
                registrationTime: 
                <b>
                  01/01/2023 - 12/31/2030
                </b>
              </p>
              <p
                className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                style={{}}
              >
                examFee: 
                <b>
                  200 €
                </b>
              </p>
              <p
                className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                style={{}}
              >
                openings: 
                <b>
                  full
                </b>
              </p>
            </div>
          </div>
          <p
            className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
            style={{}}
          >
            info.part1
            <br />
            info.part2
          </p>
          <div
            className="columns gapped-xxl"
          >
            <div
              className="rows"
            >
              <label
                htmlFor="enroll-to-queue__input-email"
              >
                <p
                  className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                  style={{}}
                >
                  <b>
                    inputs.email.heading
                  </b>
                </p>
              </label>
              <p
                className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                style={{}}
              >
                inputs.email.description
              </p>
              <div
                className="MuiFormControl-root MuiTextField-root css-1xp5r68-MuiFormControl-root-MuiTextField-root"
              >
                <div
                  className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-quhxjy-MuiInputBase-root-MuiOutlinedInput-root"
                  onClick={[Function]}
                >
                  <input
                    aria-describedby="enroll-to-queue__input-email-helper-text"
                    aria-invalid={false}
                    autoComplete="email"
                    autoFocus={false}
                    className="MuiInputBase-input MuiOutlinedInput-input css-16wblaj-MuiInputBase-input-MuiOutlinedInput-input"
                    disabled={false}
                    id="enroll-to-queue__input-email"
                    onAnimationStart={[Function]}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    required={false}
                    type="text"
                    value=""
                  />
                  <fieldset
                    aria-hidden={true}
                    className="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      className="css-w4cd9x"
                    >
                      <span
                        aria-hidden={true}
                        className="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
                <p
                  className="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-er619e-MuiFormHelperText-root"
                  id="enroll-to-queue__input-email-helper-text"
                >
                  <span
                    aria-hidden={true}
                    className="notranslate"
                  >
                    ​
                  </span>
                </p>
              </div>
            </div>
            <div
              className="rows"
            >
              <label
                htmlFor="enroll-to-queue__confirm-email"
              >
                <p
                  className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                  style={{}}
                >
                  <b>
                    inputs.confirmEmail.heading
                  </b>
                </p>
              </label>
              <p
                className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                style={{}}
              >
                inputs.confirmEmail.description
              </p>
              <div
                className="MuiFormControl-root MuiTextField-root css-1xp5r68-MuiFormControl-root-MuiTextField-root"
                onPaste={[Function]}
              >
                <div
                  className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-quhxjy-MuiInputBase-root-MuiOutlinedInput-root"
                  onClick={[Function]}
                >
                  <input
                    aria-describedby="enroll-to-queue__confirm-email-helper-text"
                    aria-invalid={false}
                    autoComplete="email"
                    autoFocus={false}
                    className="MuiInputBase-input MuiOutlinedInput-input css-16wblaj-MuiInputBase-input-MuiOutlinedInput-input"
                    disabled={false}
                    id="enroll-to-queue__confirm-email"
                    onAnimationStart={[Function]}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    required={false}
                    type="text"
                    value=""
                  />
                  <fieldset
                    aria-hidden={true}
                    className="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      className="css-w4cd9x"
                    >
                      <span
                        aria-hidden={true}
                        className="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
                <p
                  className="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-er619e-MuiFormHelperText-root"
                  id="enroll-to-queue__confirm-email-helper-text"
                >
                  <span
                    aria-hidden={true}
                    className="notranslate"
                  >
                    ​
                  </span>
                </p>
              </div>
            </div>
          </div>
          <div
            className="columns"
          >
            <button
              aria-disabled={false}
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary full-max-width css-1mns5ui-MuiButtonBase-root-MuiButton-root"
              disabled={null}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              inputs.submit.label
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InitRegistrationPage should not let user proceed if exam is full and there is no queue available 1`] = `
<div
  className="MuiGrid-root MuiGrid-direction-xs-row public-registration css-17fpwt7-MuiGrid-root"
>
  <div
    className="public-registration__grid"
  >
    <div
      className="rows public-registration__grid__heading public-registration__grid__no-stepper"
    >
      <h1
        className="MuiTypography-root MuiTypography-h1 css-10l7o3s-MuiTypography-root"
        style={{}}
      >
        unavailable.full.title
      </h1>
      <div
        className="header-separator MuiBox-root css-0"
      />
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 css-1gtchvp-MuiPaper-root"
      style={
        {
          "--Paper-shadow": "0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12)",
        }
      }
    >
      <div
        className="public-registration__grid__form-container"
      >
        <div
          className="rows gapped"
        >
          <div
            className="rows"
          >
            <div
              className="rows-gapped-xxs"
            >
              <p
                className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                style={{}}
              >
                examSession: 
                <b>
                  yki.common.languages.fin, yki.common.languageLevel.PERUS
                </b>
              </p>
              <p
                className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                style={{}}
              >
                examDate: 
                <b>
                  04/06/2019
                </b>
              </p>
              <p
                className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                style={{}}
              >
                institution: 
                <b>
                  Helsingin aikuisopisto, Töölöntullinkatu 8, Helsinki
                </b>
              </p>
              <p
                className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                style={{}}
              >
                registrationTime: 
                <b>
                  02/01/2019 - 02/28/2039
                </b>
              </p>
              <p
                className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                style={{}}
              >
                examFee: 
                <b>
                  153 €
                </b>
              </p>
              <p
                className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                style={{}}
              >
                openings: 
                <b>
                  full
                </b>
              </p>
            </div>
          </div>
          <div
            className="rows gapped"
          >
            <p
              className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
              style={{}}
            >
              full.description
            </p>
            <a
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary fit-content-max-width css-1mns5ui-MuiButtonBase-root-MuiButton-root"
              href="/yki/ilmoittautuminen"
              onBlur={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
            >
              backToHomePage
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InitRegistrationPage should not let user proceed if registration has not yet started 1`] = `
<div
  className="MuiGrid-root MuiGrid-direction-xs-row public-registration css-17fpwt7-MuiGrid-root"
>
  <div
    className="public-registration__grid"
  >
    <div
      className="rows public-registration__grid__heading public-registration__grid__no-stepper"
    >
      <h1
        className="MuiTypography-root MuiTypography-h1 css-10l7o3s-MuiTypography-root"
        style={{}}
      >
        unavailable.upcoming.title
      </h1>
      <div
        className="header-separator MuiBox-root css-0"
      />
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 css-1gtchvp-MuiPaper-root"
      style={
        {
          "--Paper-shadow": "0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12)",
        }
      }
    >
      <div
        className="public-registration__grid__form-container"
      >
        <div
          className="rows gapped"
        >
          <div
            className="rows"
          >
            <div
              className="rows-gapped-xxs"
            >
              <p
                className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                style={{}}
              >
                examSession: 
                <b>
                  yki.common.languages.fin, yki.common.languageLevel.YLIN
                </b>
              </p>
              <p
                className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                style={{}}
              >
                examDate: 
                <b>
                  12/29/2039
                </b>
              </p>
              <p
                className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                style={{}}
              >
                institution: 
                <b>
                  Amiedu, Jokukatu 4, Tampere
                </b>
              </p>
              <p
                className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                style={{}}
              >
                registrationTime: 
                <b>
                  12/01/2030 - 12/10/2039
                </b>
              </p>
              <p
                className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                style={{}}
              >
                examFee: 
                <b>
                  200 €
                </b>
              </p>
              <p
                className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                style={{}}
              >
                openings: 
                <b>
                  full
                </b>
              </p>
            </div>
          </div>
          <div
            className="rows gapped"
          >
            <p
              className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
              style={{}}
            >
              upcoming.description
            </p>
            <a
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary fit-content-max-width css-1mns5ui-MuiButtonBase-root-MuiButton-root"
              href="/yki/ilmoittautuminen"
              onBlur={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
            >
              backToHomePage
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InitRegistrationPage should not let user proceed if registration period has already ended 1`] = `
<div
  className="MuiGrid-root MuiGrid-direction-xs-row public-registration css-17fpwt7-MuiGrid-root"
>
  <div
    className="public-registration__grid"
  >
    <div
      className="rows public-registration__grid__heading public-registration__grid__no-stepper"
    >
      <h1
        className="MuiTypography-root MuiTypography-h1 css-10l7o3s-MuiTypography-root"
        style={{}}
      >
        unavailable.past.title
      </h1>
      <div
        className="header-separator MuiBox-root css-0"
      />
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 css-1gtchvp-MuiPaper-root"
      style={
        {
          "--Paper-shadow": "0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12)",
        }
      }
    >
      <div
        className="public-registration__grid__form-container"
      >
        <div
          className="rows gapped"
        >
          <div
            className="rows"
          >
            <div
              className="rows-gapped-xxs"
            >
              <p
                className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                style={{}}
              >
                examSession: 
                <b>
                  yki.common.languages.fin, yki.common.languageLevel.KESKI
                </b>
              </p>
              <p
                className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                style={{}}
              >
                examDate: 
                <b>
                  01/06/2021
                </b>
              </p>
              <p
                className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                style={{}}
              >
                institution: 
                <b>
                  Helsingin aikuisopisto, Töölöntullinkatu 8, Helsinki
                </b>
              </p>
              <p
                className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                style={{}}
              >
                registrationTime: 
                <b>
                  11/01/2020 - 12/02/2020
                </b>
              </p>
              <p
                className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                style={{}}
              >
                examFee: 
                <b>
                  176 €
                </b>
              </p>
              <p
                className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                style={{}}
              >
                openings: 
                <b>
                  full
                </b>
              </p>
            </div>
          </div>
          <div
            className="rows gapped"
          >
            <p
              className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
              style={{}}
            >
              past.description
            </p>
            <a
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary fit-content-max-width css-1mns5ui-MuiButtonBase-root-MuiButton-root"
              href="/yki/ilmoittautuminen"
              onBlur={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
            >
              backToHomePage
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InitRegistrationPage should prompt user to first identify if post-admission is ongoing and there is room 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column public-registration css-1qf2j99-MuiGrid-root"
>
  <div
    className="MuiGrid-root MuiGrid-direction-xs-row public-registration css-17fpwt7-MuiGrid-root"
  >
    <div
      className="public-registration__grid"
    >
      <div
        className="rows gapped-xxl"
      >
        <div
          aria-label="label"
          className="MuiStepper-root MuiStepper-horizontal public-registration__grid__stepper css-ibtndc-MuiStepper-root"
          role="group"
        >
          <div
            className="MuiStep-root MuiStep-horizontal css-mlh15c-MuiStep-root"
          >
            <span
              aria-current="step"
              className="MuiStepLabel-root MuiStepLabel-horizontal css-3yr9gi-MuiStepLabel-root"
            >
              <span
                className="MuiStepLabel-iconContainer Mui-active css-1b2ju2j-MuiStepLabel-iconContainer"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiStepIcon-root Mui-active css-3hpdci-MuiSvgIcon-root-MuiStepIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="12"
                  />
                  <text
                    className="MuiStepIcon-text css-1g86afo-MuiStepIcon-text"
                    dominantBaseline="central"
                    textAnchor="middle"
                    x="12"
                    y="12"
                  >
                    1
                  </text>
                </svg>
              </span>
              <span
                className="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
              >
                <span
                  className="MuiStepLabel-label Mui-active css-12eb3rq-MuiStepLabel-label"
                >
                  <p
                    className="MuiTypography-root MuiTypography-body1 css-17f73yo-MuiTypography-root"
                    style={{}}
                  >
                    phase phaseNumber: step.Identify
                  </p>
                  <span
                    aria-hidden={true}
                  >
                    step.Identify
                  </span>
                </span>
              </span>
            </span>
          </div>
          <div
            className="MuiStepConnector-root MuiStepConnector-horizontal Mui-disabled css-9ydz1a-MuiStepConnector-root"
          >
            <span
              className="MuiStepConnector-line MuiStepConnector-lineHorizontal css-14ncu80-MuiStepConnector-line"
            />
          </div>
          <div
            className="MuiStep-root MuiStep-horizontal css-mlh15c-MuiStep-root"
          >
            <span
              aria-current={false}
              className="MuiStepLabel-root MuiStepLabel-horizontal Mui-disabled public-registration__grid__stepper__step-disabled css-3yr9gi-MuiStepLabel-root"
            >
              <span
                className="MuiStepLabel-iconContainer Mui-disabled css-1b2ju2j-MuiStepLabel-iconContainer"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiStepIcon-root css-3hpdci-MuiSvgIcon-root-MuiStepIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="12"
                  />
                  <text
                    className="MuiStepIcon-text css-1g86afo-MuiStepIcon-text"
                    dominantBaseline="central"
                    textAnchor="middle"
                    x="12"
                    y="12"
                  >
                    2
                  </text>
                </svg>
              </span>
              <span
                className="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
              >
                <span
                  className="MuiStepLabel-label Mui-disabled css-12eb3rq-MuiStepLabel-label"
                >
                  <p
                    className="MuiTypography-root MuiTypography-body1 css-17f73yo-MuiTypography-root"
                    style={{}}
                  >
                    phase phaseNumber: step.Register
                  </p>
                  <span
                    aria-hidden={true}
                  >
                    step.Register
                  </span>
                </span>
              </span>
            </span>
          </div>
          <div
            className="MuiStepConnector-root MuiStepConnector-horizontal Mui-disabled css-9ydz1a-MuiStepConnector-root"
          >
            <span
              className="MuiStepConnector-line MuiStepConnector-lineHorizontal css-14ncu80-MuiStepConnector-line"
            />
          </div>
          <div
            className="MuiStep-root MuiStep-horizontal css-mlh15c-MuiStep-root"
          >
            <span
              aria-current={false}
              className="MuiStepLabel-root MuiStepLabel-horizontal Mui-disabled public-registration__grid__stepper__step-disabled css-3yr9gi-MuiStepLabel-root"
            >
              <span
                className="MuiStepLabel-iconContainer Mui-disabled css-1b2ju2j-MuiStepLabel-iconContainer"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiStepIcon-root css-3hpdci-MuiSvgIcon-root-MuiStepIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="12"
                  />
                  <text
                    className="MuiStepIcon-text css-1g86afo-MuiStepIcon-text"
                    dominantBaseline="central"
                    textAnchor="middle"
                    x="12"
                    y="12"
                  >
                    3
                  </text>
                </svg>
              </span>
              <span
                className="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
              >
                <span
                  className="MuiStepLabel-label Mui-disabled css-12eb3rq-MuiStepLabel-label"
                >
                  <p
                    className="MuiTypography-root MuiTypography-body1 css-17f73yo-MuiTypography-root"
                    style={{}}
                  >
                    phase phaseNumber: step.Payment
                  </p>
                  <span
                    aria-hidden={true}
                  >
                    step.Payment
                  </span>
                </span>
              </span>
            </span>
          </div>
          <div
            className="MuiStepConnector-root MuiStepConnector-horizontal Mui-disabled css-9ydz1a-MuiStepConnector-root"
          >
            <span
              className="MuiStepConnector-line MuiStepConnector-lineHorizontal css-14ncu80-MuiStepConnector-line"
            />
          </div>
          <div
            className="MuiStep-root MuiStep-horizontal css-mlh15c-MuiStep-root"
          >
            <span
              aria-current={false}
              className="MuiStepLabel-root MuiStepLabel-horizontal Mui-disabled public-registration__grid__stepper__step-disabled css-3yr9gi-MuiStepLabel-root"
            >
              <span
                className="MuiStepLabel-iconContainer Mui-disabled css-1b2ju2j-MuiStepLabel-iconContainer"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiStepIcon-root css-3hpdci-MuiSvgIcon-root-MuiStepIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="12"
                  />
                  <text
                    className="MuiStepIcon-text css-1g86afo-MuiStepIcon-text"
                    dominantBaseline="central"
                    textAnchor="middle"
                    x="12"
                    y="12"
                  >
                    4
                  </text>
                </svg>
              </span>
              <span
                className="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
              >
                <span
                  className="MuiStepLabel-label Mui-disabled css-12eb3rq-MuiStepLabel-label"
                >
                  <p
                    className="MuiTypography-root MuiTypography-body1 css-17f73yo-MuiTypography-root"
                    style={{}}
                  >
                    phase phaseNumber: step.Done
                  </p>
                  <span
                    aria-hidden={true}
                  >
                    step.Done
                  </span>
                </span>
              </span>
            </span>
          </div>
        </div>
        <div
          className="rows public-registration__grid__heading"
        >
          <h1
            className="MuiTypography-root MuiTypography-h1 css-10l7o3s-MuiTypography-root"
            style={{}}
          >
            title
          </h1>
          <div
            className="header-separator MuiBox-root css-0"
          />
        </div>
      </div>
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 css-1gtchvp-MuiPaper-root"
        style={
          {
            "--Paper-shadow": "0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12)",
          }
        }
      >
        <div
          className="public-registration__grid__form-container"
        >
          <div
            className="rows gapped"
          >
            <div
              className="rows"
            >
              <div
                className="rows-gapped-xxs"
              >
                <p
                  className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                  style={{}}
                >
                  examSession: 
                  <b>
                    yki.common.languages.fin, yki.common.languageLevel.YLIN
                  </b>
                </p>
                <p
                  className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                  style={{}}
                >
                  examDate: 
                  <b>
                    01/01/2035
                  </b>
                </p>
                <p
                  className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                  style={{}}
                >
                  institution: 
                  <b>
                    Amiedu, Jokukatu 4, Tampere
                  </b>
                </p>
                <p
                  className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                  style={{}}
                >
                  registrationTime: 
                  <b>
                    08/01/2023 - 09/01/2030
                  </b>
                </p>
                <p
                  className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                  style={{}}
                >
                  examFee: 
                  <b>
                    200 €
                  </b>
                </p>
                <p
                  className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                  style={{}}
                >
                  openings: 
                  <b>
                    6
                  </b>
                </p>
              </div>
            </div>
            <p
              className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
              style={{}}
            >
              registrationIsBindingAdvisory
            </p>
            <div
              className="gapped rows"
            >
              <h2
                className="MuiTypography-root MuiTypography-h2 css-o2za6n-MuiTypography-root"
                style={{}}
              >
                selectIdentificationMethod
              </h2>
              <p
                className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                style={{}}
              >
                caption
              </p>
              <p
                className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                style={{}}
              >
                <br />
                withFinnishSSN.info
              </p>
              <a
                className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorSecondary public-registration__grid__form-container__registration-button css-r1ewpe-MuiButtonBase-root-MuiButton-root"
                href="/yki/auth/?examSessionId=888"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
              >
                suomiFiButtonText
              </a>
              <p
                className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                style={{}}
              >
                <br />
                withoutFinnishSSN.info
              </p>
              <div
                className="columns gapped align-items-end"
              >
                <div
                  className="rows"
                >
                  <label
                    htmlFor="email-identification__email-input"
                  >
                    <p
                      className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                      style={{}}
                    >
                      <b>
                        label
                      </b>
                    </p>
                  </label>
                  <p
                    className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                    style={{}}
                  >
                    placeholder
                  </p>
                  <div
                    className="MuiFormControl-root MuiTextField-root public-registration__grid__form-container__registration-text-field css-1xp5r68-MuiFormControl-root-MuiTextField-root"
                  >
                    <div
                      className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-quhxjy-MuiInputBase-root-MuiOutlinedInput-root"
                      onClick={[Function]}
                    >
                      <input
                        aria-invalid={false}
                        autoComplete="email"
                        autoFocus={false}
                        className="MuiInputBase-input MuiOutlinedInput-input css-16wblaj-MuiInputBase-input-MuiOutlinedInput-input"
                        disabled={false}
                        id="email-identification__email-input"
                        onAnimationStart={[Function]}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={false}
                        type="email"
                        value=""
                      />
                      <fieldset
                        aria-hidden={true}
                        className="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          className="css-w4cd9x"
                        >
                          <span
                            aria-hidden={true}
                            className="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
                <div
                  className="rows"
                >
                  <button
                    className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary public-registration__grid__form-container__registration-button css-1mns5ui-MuiButtonBase-root-MuiButton-root"
                    disabled={null}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onContextMenu={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    emailButtonText
                  </button>
                </div>
                 
              </div>
              <div
                className="columns margin-top-lg justify-content-center"
              >
                <div
                  className="rows flex-end gapped margin-top-lg align-items-center"
                >
                  <a
                    className="custom-button-link"
                    href="/yki/ilmoittautuminen"
                    onClick={[Function]}
                  >
                    <button
                      className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorSecondary MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorSecondary css-1xj59sp-MuiButtonBase-root-MuiButton-root"
                      data-testid="public-registration__controlButtons__abort"
                      disabled={null}
                      onBlur={[Function]}
                      onContextMenu={[Function]}
                      onDragLeave={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      tabIndex={0}
                      type="button"
                    >
                      abortRegistration
                    </button>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
   
</div>
`;

exports[`InitRegistrationPage should prompt user to first identify if regular admission is ongoing and there is room 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column public-registration css-1qf2j99-MuiGrid-root"
>
  <div
    className="MuiGrid-root MuiGrid-direction-xs-row public-registration css-17fpwt7-MuiGrid-root"
  >
    <div
      className="public-registration__grid"
    >
      <div
        className="rows gapped-xxl"
      >
        <div
          aria-label="label"
          className="MuiStepper-root MuiStepper-horizontal public-registration__grid__stepper css-ibtndc-MuiStepper-root"
          role="group"
        >
          <div
            className="MuiStep-root MuiStep-horizontal css-mlh15c-MuiStep-root"
          >
            <span
              aria-current="step"
              className="MuiStepLabel-root MuiStepLabel-horizontal css-3yr9gi-MuiStepLabel-root"
            >
              <span
                className="MuiStepLabel-iconContainer Mui-active css-1b2ju2j-MuiStepLabel-iconContainer"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiStepIcon-root Mui-active css-3hpdci-MuiSvgIcon-root-MuiStepIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="12"
                  />
                  <text
                    className="MuiStepIcon-text css-1g86afo-MuiStepIcon-text"
                    dominantBaseline="central"
                    textAnchor="middle"
                    x="12"
                    y="12"
                  >
                    1
                  </text>
                </svg>
              </span>
              <span
                className="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
              >
                <span
                  className="MuiStepLabel-label Mui-active css-12eb3rq-MuiStepLabel-label"
                >
                  <p
                    className="MuiTypography-root MuiTypography-body1 css-17f73yo-MuiTypography-root"
                    style={{}}
                  >
                    phase phaseNumber: step.Identify
                  </p>
                  <span
                    aria-hidden={true}
                  >
                    step.Identify
                  </span>
                </span>
              </span>
            </span>
          </div>
          <div
            className="MuiStepConnector-root MuiStepConnector-horizontal Mui-disabled css-9ydz1a-MuiStepConnector-root"
          >
            <span
              className="MuiStepConnector-line MuiStepConnector-lineHorizontal css-14ncu80-MuiStepConnector-line"
            />
          </div>
          <div
            className="MuiStep-root MuiStep-horizontal css-mlh15c-MuiStep-root"
          >
            <span
              aria-current={false}
              className="MuiStepLabel-root MuiStepLabel-horizontal Mui-disabled public-registration__grid__stepper__step-disabled css-3yr9gi-MuiStepLabel-root"
            >
              <span
                className="MuiStepLabel-iconContainer Mui-disabled css-1b2ju2j-MuiStepLabel-iconContainer"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiStepIcon-root css-3hpdci-MuiSvgIcon-root-MuiStepIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="12"
                  />
                  <text
                    className="MuiStepIcon-text css-1g86afo-MuiStepIcon-text"
                    dominantBaseline="central"
                    textAnchor="middle"
                    x="12"
                    y="12"
                  >
                    2
                  </text>
                </svg>
              </span>
              <span
                className="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
              >
                <span
                  className="MuiStepLabel-label Mui-disabled css-12eb3rq-MuiStepLabel-label"
                >
                  <p
                    className="MuiTypography-root MuiTypography-body1 css-17f73yo-MuiTypography-root"
                    style={{}}
                  >
                    phase phaseNumber: step.Register
                  </p>
                  <span
                    aria-hidden={true}
                  >
                    step.Register
                  </span>
                </span>
              </span>
            </span>
          </div>
          <div
            className="MuiStepConnector-root MuiStepConnector-horizontal Mui-disabled css-9ydz1a-MuiStepConnector-root"
          >
            <span
              className="MuiStepConnector-line MuiStepConnector-lineHorizontal css-14ncu80-MuiStepConnector-line"
            />
          </div>
          <div
            className="MuiStep-root MuiStep-horizontal css-mlh15c-MuiStep-root"
          >
            <span
              aria-current={false}
              className="MuiStepLabel-root MuiStepLabel-horizontal Mui-disabled public-registration__grid__stepper__step-disabled css-3yr9gi-MuiStepLabel-root"
            >
              <span
                className="MuiStepLabel-iconContainer Mui-disabled css-1b2ju2j-MuiStepLabel-iconContainer"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiStepIcon-root css-3hpdci-MuiSvgIcon-root-MuiStepIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="12"
                  />
                  <text
                    className="MuiStepIcon-text css-1g86afo-MuiStepIcon-text"
                    dominantBaseline="central"
                    textAnchor="middle"
                    x="12"
                    y="12"
                  >
                    3
                  </text>
                </svg>
              </span>
              <span
                className="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
              >
                <span
                  className="MuiStepLabel-label Mui-disabled css-12eb3rq-MuiStepLabel-label"
                >
                  <p
                    className="MuiTypography-root MuiTypography-body1 css-17f73yo-MuiTypography-root"
                    style={{}}
                  >
                    phase phaseNumber: step.Payment
                  </p>
                  <span
                    aria-hidden={true}
                  >
                    step.Payment
                  </span>
                </span>
              </span>
            </span>
          </div>
          <div
            className="MuiStepConnector-root MuiStepConnector-horizontal Mui-disabled css-9ydz1a-MuiStepConnector-root"
          >
            <span
              className="MuiStepConnector-line MuiStepConnector-lineHorizontal css-14ncu80-MuiStepConnector-line"
            />
          </div>
          <div
            className="MuiStep-root MuiStep-horizontal css-mlh15c-MuiStep-root"
          >
            <span
              aria-current={false}
              className="MuiStepLabel-root MuiStepLabel-horizontal Mui-disabled public-registration__grid__stepper__step-disabled css-3yr9gi-MuiStepLabel-root"
            >
              <span
                className="MuiStepLabel-iconContainer Mui-disabled css-1b2ju2j-MuiStepLabel-iconContainer"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiStepIcon-root css-3hpdci-MuiSvgIcon-root-MuiStepIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="12"
                  />
                  <text
                    className="MuiStepIcon-text css-1g86afo-MuiStepIcon-text"
                    dominantBaseline="central"
                    textAnchor="middle"
                    x="12"
                    y="12"
                  >
                    4
                  </text>
                </svg>
              </span>
              <span
                className="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
              >
                <span
                  className="MuiStepLabel-label Mui-disabled css-12eb3rq-MuiStepLabel-label"
                >
                  <p
                    className="MuiTypography-root MuiTypography-body1 css-17f73yo-MuiTypography-root"
                    style={{}}
                  >
                    phase phaseNumber: step.Done
                  </p>
                  <span
                    aria-hidden={true}
                  >
                    step.Done
                  </span>
                </span>
              </span>
            </span>
          </div>
        </div>
        <div
          className="rows public-registration__grid__heading"
        >
          <h1
            className="MuiTypography-root MuiTypography-h1 css-10l7o3s-MuiTypography-root"
            style={{}}
          >
            title
          </h1>
          <div
            className="header-separator MuiBox-root css-0"
          />
        </div>
      </div>
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 css-1gtchvp-MuiPaper-root"
        style={
          {
            "--Paper-shadow": "0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12)",
          }
        }
      >
        <div
          className="public-registration__grid__form-container"
        >
          <div
            className="rows gapped"
          >
            <div
              className="rows"
            >
              <div
                className="rows-gapped-xxs"
              >
                <p
                  className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                  style={{}}
                >
                  examSession: 
                  <b>
                    yki.common.languages.fin, yki.common.languageLevel.KESKI
                  </b>
                </p>
                <p
                  className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                  style={{}}
                >
                  examDate: 
                  <b>
                    04/06/2019
                  </b>
                </p>
                <p
                  className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                  style={{}}
                >
                  institution: 
                  <b>
                    Amiedu, Jokukatu 4, Tampere
                  </b>
                </p>
                <p
                  className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                  style={{}}
                >
                  registrationTime: 
                  <b>
                    02/01/2019 - 02/28/2039
                  </b>
                </p>
                <p
                  className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                  style={{}}
                >
                  examFee: 
                  <b>
                    176 €
                  </b>
                </p>
                <p
                  className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                  style={{}}
                >
                  openings: 
                  <b>
                    20
                  </b>
                </p>
              </div>
            </div>
            <p
              className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
              style={{}}
            >
              registrationIsBindingAdvisory
            </p>
            <div
              className="gapped rows"
            >
              <h2
                className="MuiTypography-root MuiTypography-h2 css-o2za6n-MuiTypography-root"
                style={{}}
              >
                selectIdentificationMethod
              </h2>
              <p
                className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                style={{}}
              >
                caption
              </p>
              <p
                className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                style={{}}
              >
                <br />
                withFinnishSSN.info
              </p>
              <a
                className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorSecondary public-registration__grid__form-container__registration-button css-r1ewpe-MuiButtonBase-root-MuiButton-root"
                href="/yki/auth/?examSessionId=11"
                onBlur={[Function]}
                onContextMenu={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
              >
                suomiFiButtonText
              </a>
              <p
                className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                style={{}}
              >
                <br />
                withoutFinnishSSN.info
              </p>
              <div
                className="columns gapped align-items-end"
              >
                <div
                  className="rows"
                >
                  <label
                    htmlFor="email-identification__email-input"
                  >
                    <p
                      className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                      style={{}}
                    >
                      <b>
                        label
                      </b>
                    </p>
                  </label>
                  <p
                    className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                    style={{}}
                  >
                    placeholder
                  </p>
                  <div
                    className="MuiFormControl-root MuiTextField-root public-registration__grid__form-container__registration-text-field css-1xp5r68-MuiFormControl-root-MuiTextField-root"
                  >
                    <div
                      className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-quhxjy-MuiInputBase-root-MuiOutlinedInput-root"
                      onClick={[Function]}
                    >
                      <input
                        aria-invalid={false}
                        autoComplete="email"
                        autoFocus={false}
                        className="MuiInputBase-input MuiOutlinedInput-input css-16wblaj-MuiInputBase-input-MuiOutlinedInput-input"
                        disabled={false}
                        id="email-identification__email-input"
                        onAnimationStart={[Function]}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={false}
                        type="email"
                        value=""
                      />
                      <fieldset
                        aria-hidden={true}
                        className="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          className="css-w4cd9x"
                        >
                          <span
                            aria-hidden={true}
                            className="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
                <div
                  className="rows"
                >
                  <button
                    className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary public-registration__grid__form-container__registration-button css-1mns5ui-MuiButtonBase-root-MuiButton-root"
                    disabled={null}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onContextMenu={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    emailButtonText
                  </button>
                </div>
                 
              </div>
              <div
                className="columns margin-top-lg justify-content-center"
              >
                <div
                  className="rows flex-end gapped margin-top-lg align-items-center"
                >
                  <a
                    className="custom-button-link"
                    href="/yki/ilmoittautuminen"
                    onClick={[Function]}
                  >
                    <button
                      className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorSecondary MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorSecondary css-1xj59sp-MuiButtonBase-root-MuiButton-root"
                      data-testid="public-registration__controlButtons__abort"
                      disabled={null}
                      onBlur={[Function]}
                      onContextMenu={[Function]}
                      onDragLeave={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      tabIndex={0}
                      type="button"
                    >
                      abortRegistration
                    </button>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
   
</div>
`;
